--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ target 'voice' do
 
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'react-native-appearance', :path => '../node_modules/react-native-appearance'
+
   target 'voiceTests' do
     inherit! :complete
     # Pods for testing
