--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-voice/voice": "^3.1.5",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "axios": "^0.24.0",
+    "jsonp": "^0.2.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-appearance": "^0.3.4",
