--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "jsonp": "^0.2.1",
     "react": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-native": "0.64.1",
     "react-native-appearance": "^0.3.4",
     "react-native-elements": "^3.4.2",
@@ -24,6 +25,10 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
