--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.9.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.0.0",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
