--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-appearance": "^0.3.4",
+    "react-native-card-flip": "^1.0.7",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
